--- a/dev/index.html
+++ b/dev/index.html
@@ -3,8 +3,8 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>&lt;my-element> Demo</title>
-    <script type="module" src="../my-element.js"></script>
+    <title>input-lit-element</title>
+    <script type="module" src="../wh-input-number.js"></script>
     <style>
       p {
         border: solid 1px blue;
@@ -13,8 +13,7 @@
     </style>
   </head>
   <body>
-    <my-element>
-      <p>This is child content</p>
-    </my-element>
+    <wh-input-number>
+    </wh-input-number>
   </body>
 </html>
