fixed input style

--- a/dev/index.html
+++ b/dev/index.html
@@ -13,7 +13,7 @@
     </style>
   </head>
   <body>
-    <wh-input-number>
+    <wh-input-number>Only numbers
     </wh-input-number>
   </body>
 </html>
