added material icons

--- a/dev/index.html
+++ b/dev/index.html
@@ -3,6 +3,8 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link rel="shortcut icon" href="#">
+    <link rel="stylesheet" href="node_modules/material-icons/iconfont/material-icons.css">
     <title>input-lit-element</title>
     <script type="module" src="../wh-input-number.js"></script>
     <style>
